BUGFIX: VideoBlocks no longer require two clicks to play on mobile devices.
My oh-so-clever solution for getting the video to play when the user clicks the
title overlay block turned out to only worked on desktop. On mobile, I had to do
some  shenanigans with unclickability rules to ensure that the initial tap went
through directly to the iframe. I also added some code to make the title div
vanish when tapped, which is needed on iPads since they don't play the video in
full screen.

The new utils.js file currently only adds a simplified Modernizr test to check
if the user is on a mobile device.

--- a/jetstream/static/jetstream/css/blocks/video-block.less
+++ b/jetstream/static/jetstream/css/blocks/video-block.less
@@ -17,6 +17,13 @@
   left: 0;
   z-index: 11;
   cursor: pointer;
+  &.mc-hammer {
+    // Prevent tap actions and mouse clicks when the overlay has this class. Can't use "touch-actions: none" because
+    // iOS Safari doesn't support that. This is probably better anyway, because it allows scroll events that
+    // start on the video overlay to still function.
+    touch-action: manipulation;
+    pointer-events: none;
+  }
 }
 
 .video-block-title-background {
@@ -27,6 +34,9 @@
   height: 80px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
+  // Ensures that even if the main overlay has its interactivity disabled, this div will still be clickable/tappable.
+  touch-action: auto;
+  pointer-events: auto;
 }
 
 .video-block-title {
